--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -19099,7 +19099,7 @@ html[dir="rtl"] .theme-editor-php .CodeMirror-code {
   width: 4em;
   font-size: 10px;
   line-height: 1.3;
-  box-shadow: none;
+  box-shadow: none !important;
   text-shadow: none;
   font-family: inherit;
 }
@@ -20694,6 +20694,11 @@ div.dropzone.dz-started .dz-default.dz-message .dz-button {
 
 #video-uploader.dropzone .dz-preview.dz-file-preview {
   width: 250px;
+}
+
+body > .open-popup.video-error-popup {
+  position: relative;
+  z-index: 999999;
 }
 
 .ac-reply-content .ac-reply-attachments .dropzone.video .dz-preview.dz-file-preview {
